2003-04-28  Emmanuel Beffara  <manu@beffara.org>

	* src/graphics.py: Fixed a stupid typo.

2003-04-21  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py (update_seq): Added a space in the regexp for control
	sequences.

2003-04-17  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/bibtex.py: Added a missing return statement.

2003-04-09  Emmanuel Beffara  <manu@beffara.org>

	* Version 0.99.6 released.

2003-04-01  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/graphics.py: Added support for EPS/LaTeX figures.

	* src/modules/cweb.py: Added a conversion rule for imported CWEB
	source files, fixed the module.

	* src/cmdline.py: Added the missing call to env.make_source().

	* src/__init__.py, src/util.py: Added support for LaTeX source
	conversion rules.

	* src/modules/epsfig.py, man/...: Added support for epsfig.

2003-03-31  Emmanuel Beffara  <manu@beffara.org>

	* src/info.py: Fixed file name tracking again.

	* src/__init__.py, src/util.py, src/graphics/__init__.py: Revised the
	definition of Converter.

2003-03-27  Emmanuel Beffara  <manu@beffara.org>

	* src/util.py, src/graphics/__init__.py: Changed the converter
	mechanism into a utility class.

2003-03-26  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/cmdline.py, src/modules/dvips.py: Added paper
	size options.

2003-03-22  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/cmdline.py, man/...: Added directive "read" and
	changed the command line to use directives.

	* src/modules/mkeidx.py, man/...: Added directives in makeidx to
	specify options for makeindex.

	* src/modules/bibtex.py, man/...: Added support for BibTeX path
	changing.

	* src/__init__.py: Introduced support for module-specific directives.

	* src/__init__.py, src/modules/...: Modified the module structure into
	a more object-oriented one, introducing a base class Module in module
	rubber.

2003-03-21  Emmanuel Beffara  <manu@beffara.org>
